--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins";
     background-color: #009688;
     display: flex;
     justify-content: center;
@@ -17,14 +17,20 @@ body {
     width: 300px;
 }
 
+.quiz-container h1{
+    font-weight: 700;
+}
+
 button {
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 10px 15px;
     border: none;
     background-color: #007bff;
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 20px;
 }
 
 button:hover {
